--- a/styles/style.css
+++ b/styles/style.css
@@ -66,6 +66,64 @@ p {
 }
 
 
+
+/* Support */
+.support {
+    width: 1140px;
+    height: 313px;
+    margin: 0 auto;
+    background: url("../assets/handshake.jpg"), rgba(0, 0, 0, 0.2);
+    border-radius: 16px;
+    background-blend-mode: overlay;
+    background-position: center center;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 80px;
+}
+
+.support h3 {
+    color: rgb(255, 255, 255);
+    font-size: 32px;
+    font-weight: 700;
+    margin-bottom: 16px;
+}
+
+.support p {
+    color: rgb(255, 255, 255);
+    margin-bottom: 39px;
+}
+
+.feedback input {
+    border: 1px solid rgba(13, 19, 33, 0.15);
+    border-radius: 8px;
+    background: rgb(255, 255, 255);
+    padding: 19px;
+    width: 548px;
+    color: rgba(13, 19, 33, 0.4);
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.feedback input::placeholder {
+    color: rgba(13, 19, 33, 0.4);
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.feedback button {
+    width: 120px;
+    padding: 17px 20px 17px 20px;
+    color: rgb(13, 19, 33);
+    font-size: 20px;
+    font-weight: 600;
+    border-radius: 8px;
+    background: rgb(255, 255, 255);
+    border: 1px solid rgba(13, 19, 33, 0.15);
+}
+
 /* Footer */
 
 footer {
