--- a/styles/style.css
+++ b/styles/style.css
@@ -155,6 +155,10 @@ p {
 }
 
 /* Inspiration */
+.inspiration {
+    margin-bottom: 149px;
+}
+
 .insp-txt h2 {
     color: rgb(13, 19, 33);
     font-size: 32px;
@@ -184,11 +188,84 @@ p {
     border-radius: 16px;
 }
 
+/* Current Target */
+.c-target {
+    margin-bottom: 48px;
+}
+
+.target-txt {
+    width: 852px;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 48px;
+}
+
+.target-txt h2 {
+    color: rgb(13, 19, 33);
+    font-size: 32px;
+    font-weight: 800;
+    margin-bottom: 24px;
+}
+
+.target-txt p {
+    line-height: 26px;
+}
+
+
+.skills {
+    display: flex;
+    gap: 24px;
+}
+
+.skill {
+    width: 364px;
+    padding: 40px;
+    border-radius: 16px;
+}
+
+.skill img {
+    width: 56px;
+    height: 56px;
+    margin-bottom: 24px;
+}
+
+.skill h4 {
+    color: rgb(13, 19, 33);
+    font-size: 24px;
+    font-weight: 800;
+    margin-bottom: 8px;
+}
+
+.skill p {
+    line-height: 26px;
+    margin-bottom: 24px;
+}
+
+.skill a {
+    color: rgb(13, 19, 33);
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 19px;
+}
+
+.skill:first-child {
+    background: rgba(255, 76, 30, 0.05);
+}
+
+.skill:nth-child(2) {
+    background: rgba(0, 76, 232, 0.05);
+}
+
+.skill:last-child {
+    background: rgba(255, 223, 0, 0.05);
+}
+
+
 
 /* Support */
 .support {
     height: 313px;
-    background: url("../assets/handshake.jpg"), rgba(0, 0, 0, 0.2);
+    background: url("../assets/handshake.jpg"), rgba(0, 0, 0, 0.6);
     border-radius: 16px;
     background-blend-mode: overlay;
     background-position: center center;
